// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 1`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 2`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 3`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 4`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 5`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 6`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 1`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 2`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 3`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 4`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 5`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 6`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 1`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "animals",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 2`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "animals",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 3`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 4`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "animals[0].name",
      "message": "should be non-null but was undefined",
    },
    {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 5`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 6`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 7`] = `
{
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 1`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "sets",
      "message": "should be an array (or null), but was a undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 2`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 3`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 4`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "sets[0]",
      "message": "should be an array (or null), but was a number",
    },
    {
      "keyPath": "sets[1]",
      "message": "should be an array (or null), but was a number",
    },
    {
      "keyPath": "sets[2]",
      "message": "should be an array (or null), but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 5`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "sets[0][2]",
      "message": "should be non-null but was null",
    },
    {
      "keyPath": "sets[1][0]",
      "message": "should be an integer but was a boolean",
    },
    {
      "keyPath": "sets[1][1]",
      "message": "should be an integer but was a object",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 6`] = `
{
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "sets[0]",
      "message": "should be non-null but was null",
    },
    {
      "keyPath": "sets[2]",
      "message": "should be an array (or null), but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 1`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 2`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 3`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 4`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people[0]",
      "message": "should be an object but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 5`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people[0].name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 6`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people[0].name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 7`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 8`] = `
{
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "people[0]",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 1`] = `
{
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "favoriteNumbers",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 2`] = `
{
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "favoriteNumbers",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 3`] = `
{
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 4`] = `
{
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "favoriteNumbers",
      "message": "should be an array (or null), but was an object",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 5`] = `
{
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "favoriteNumbers[1]",
      "message": "should be an integer but was a float",
    },
    {
      "keyPath": "favoriteNumbers[2]",
      "message": "should be non-null but was null",
    },
    {
      "keyPath": "favoriteNumbers[3]",
      "message": "should be an integer but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects creates errors for keys not present in the query 1`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects creates errors for keys not present in the query 2`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "has key 'foo' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 1`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 2`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 3`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.nom",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 4`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.nom",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 5`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 6`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "chris",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 7`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "chris",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 8`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "chris.nom",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 9`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "chris.nom",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 10`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 1`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 2`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 3`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 4`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 5`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 6`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address",
      "message": "has key 'street' not present in the query",
    },
    {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 1`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 2`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 3`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 4`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 5`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 6`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 7`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 8`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 9`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.address",
      "message": "has key 'street' not present in the query",
    },
    {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 1`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 2`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 3`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 4`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 5`] = `
{
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 1`] = `
{
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "married",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 2`] = `
{
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "married",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 3`] = `
{
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "married",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 4`] = `
{
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 5`] = `
{
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 6`] = `
{
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "responded",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 7`] = `
{
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "responded",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 8`] = `
{
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 9`] = `
{
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 10`] = `
{
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 1`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 2`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 3`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "Value "SEVENTH" does not exist in "Generation" enum.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 4`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "Enum "Generation" cannot represent non-string value: true.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 5`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 6`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "should be a Generation (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 7`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 8`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "Value "SEVENTH" does not exist in "Generation" enum.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 9`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "generation",
      "message": "Enum "Generation" cannot represent non-string value: true.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 10`] = `
{
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 1`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [
    {
      "keyPath": "haveBirthday",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 2`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [
    {
      "keyPath": "haveBirthday",
      "message": "should be an object but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 3`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [
    {
      "keyPath": "haveBirthday.hadFunBirthday",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 4`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 5`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [
    {
      "keyPath": "haveBirthday.hadFunBirthday",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 6`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 7`] = `
{
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 1`] = `
{
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 2`] = `
{
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 3`] = `
{
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 4`] = `
{
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 5`] = `
{
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 6`] = `
{
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 7`] = `
{
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "height",
      "message": "should be a float (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 8`] = `
{
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 9`] = `
{
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 10`] = `
{
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 1`] = `
{
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be a string but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 2`] = `
{
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 3`] = `
{
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 4`] = `
{
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 5`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "address",
      "message": "should be a string but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 6`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "address",
      "message": "should be a string (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 7`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 8`] = `
{
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 1`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be a string but was a number",
    },
    {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 2`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be non-null but was undefined",
    },
    {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 3`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
    {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 4`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
    {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 5`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 6`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 7`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 8`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 9`] = `
{
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": [
    {
      "keyPath": "age",
      "message": "should be an integer but was a string",
    },
  ],
}
`;
